# IWOCL19-C2S-Blur

./: .gitignore  CMakeLists.txt  LICENSE
ch.stautob.cuda2sycl.example_blur_cuda/src/: filter.cu  filter.h  lodepng.cpp  lodepng.h
ch.stautob.cuda2sycl.example_blur_sycl/: CMakeLists.txt
ch.stautob.cuda2sycl.example_blur_sycl/src/: filter.cpp  filter.h  main.cpp
cmake/Modules/: AddExample.cmake
